fixed work with us backgrounds to make text more readable, text space issues on homepage, single app text readability

--- a/assets/scss/_public.scss
+++ b/assets/scss/_public.scss
@@ -11,6 +11,12 @@
   @media #{$break-sm-xs} {
     background: #101920;
   }
+  .header{
+    background:#101920;
+    h2{
+      margin-bottom:0;
+    }
+  }
   .workit-content{
     background:url(../img/illustrations/space-fade.png);
     background-position: top center;
